--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "locomotive-scroll": "^4.1.4",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-locomotive-scroll": "^0.2.0",
+    "react-router-dom": "^6.6.2",
     "react-scripts": "^5.0.1",
-    "css-loader": "^6.7.1",
-    "dotenv-webpack": "^7.1.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
